Update to utilize sqlite database
